--- a/apps/templates/accounts/login.html
+++ b/apps/templates/accounts/login.html
@@ -8,24 +8,24 @@
 {% block content %}
 
     <!-- Page content -->
-    <div class="container mt--8 pb-5">
+    <div class="container mt--8 pb-3">
       <div class="row justify-content-center">
         <div class="col-lg-5 col-md-7">
-          <div class="card bg-secondary shadow border-0">
-            <div class="card-header bg-transparent pb-5">
+          <div class="card shadow border-0">
+            <div class="card-header bg-transparent pb-2">
               <div class="text-muted text-center mt-2 mb-3">
-                Sign IN
+                Entrar
               </div>
             </div>
-            <div class="card-body px-lg-5 py-lg-5">
+            <div class="card-body px-lg-5 py-lg-2">
               <div class="text-center text-muted mb-4">
 
                 {% if msg %}
                   <p>{{ msg }}</p>
                 {% else %}
-                  <p>
-                    Add your credentials
-                  </p>
+{#                  <p>#}
+{#                    Add your credentials#}
+{#                  </p>#}
                 {% endif %}  
 
               </div>
@@ -53,23 +53,23 @@
                 <div class="custom-control custom-control-alternative custom-checkbox">
                   <input class="custom-control-input" id=" customCheckLogin" type="checkbox">
                   <label class="custom-control-label" for=" customCheckLogin">
-                    <span class="text-muted">Remember me</span>
+                    <span class="text-muted">Recordarme</span>
                   </label>
                 </div>
                 <div class="text-center">
-                  <button type="submit" class="btn btn-primary my-4">Sign in</button>
+                  <button type="submit" class="btn btn-primary my-4">Entrar</button>
                 </div>
               </form>
             </div>
           </div>
-          <div class="row mt-3">
-            <div class="col-6">
-              <a href="{% url 'register' %}" class="text-light"><small>Register</small></a>
-            </div>
-            <div class="col-6 text-right">
-              <a href="https://appseed.us/support" class="text-light"><small>Get Support</small></a>
-            </div>
-          </div>
+{#          <div class="row mt-3">#}
+{#            <div class="col-6">#}
+{#              <a href="{% url 'register' %}" class="text-light"><small>Register</small></a>#}
+{#            </div>#}
+{#            <div class="col-6 text-right">#}
+{#              <a href="https://appseed.us/support" class="text-light"><small>Get Support</small></a>#}
+{#            </div>#}
+{#          </div>#}
         </div>
       </div>
     </div>
