--- a/apps/templates/includes/navigation.html
+++ b/apps/templates/includes/navigation.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-top navbar-expand navbar-dark bg-primary border-bottom">
+<nav class="navbar navbar-top navbar-expand navbar-dark bg-secondary border-bottom">
   <div class="container-fluid">
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <!-- Search form -->
@@ -143,51 +143,51 @@
             <a href="#!" class="dropdown-item text-center text-primary font-weight-bold py-3">View all</a>
           </div>
         </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <i class="ni ni-ungroup"></i>
-          </a>
-          <div class="dropdown-menu dropdown-menu-lg dropdown-menu-dark bg-default  dropdown-menu-right ">
-            <div class="row shortcuts px-4">
-              <a href="#!" class="col-4 shortcut-item">
-                <span class="shortcut-media avatar rounded-circle bg-gradient-red">
-                  <i class="ni ni-calendar-grid-58"></i>
-                </span>
-                <small>Calendar</small>
-              </a>
-              <a href="#!" class="col-4 shortcut-item">
-                <span class="shortcut-media avatar rounded-circle bg-gradient-orange">
-                  <i class="ni ni-email-83"></i>
-                </span>
-                <small>Email</small>
-              </a>
-              <a href="#!" class="col-4 shortcut-item">
-                <span class="shortcut-media avatar rounded-circle bg-gradient-info">
-                  <i class="ni ni-credit-card"></i>
-                </span>
-                <small>Payments</small>
-              </a>
-              <a href="#!" class="col-4 shortcut-item">
-                <span class="shortcut-media avatar rounded-circle bg-gradient-green">
-                  <i class="ni ni-books"></i>
-                </span>
-                <small>Reports</small>
-              </a>
-              <a href="#!" class="col-4 shortcut-item">
-                <span class="shortcut-media avatar rounded-circle bg-gradient-purple">
-                  <i class="ni ni-pin-3"></i>
-                </span>
-                <small>Maps</small>
-              </a>
-              <a href="#!" class="col-4 shortcut-item">
-                <span class="shortcut-media avatar rounded-circle bg-gradient-yellow">
-                  <i class="ni ni-basket"></i>
-                </span>
-                <small>Shop</small>
-              </a>
-            </div>
-          </div>
-        </li>
+{#        <li class="nav-item dropdown">#}
+{#          <a class="nav-link" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">#}
+{#            <i class="ni ni-ungroup"></i>#}
+{#          </a>#}
+{#          <div class="dropdown-menu dropdown-menu-lg dropdown-menu-dark bg-default  dropdown-menu-right ">#}
+{#            <div class="row shortcuts px-4">#}
+{#              <a href="#!" class="col-4 shortcut-item">#}
+{#                <span class="shortcut-media avatar rounded-circle bg-gradient-red">#}
+{#                  <i class="ni ni-calendar-grid-58"></i>#}
+{#                </span>#}
+{#                <small>Calendar</small>#}
+{#              </a>#}
+{#              <a href="#!" class="col-4 shortcut-item">#}
+{#                <span class="shortcut-media avatar rounded-circle bg-gradient-orange">#}
+{#                  <i class="ni ni-email-83"></i>#}
+{#                </span>#}
+{#                <small>Email</small>#}
+{#              </a>#}
+{#              <a href="#!" class="col-4 shortcut-item">#}
+{#                <span class="shortcut-media avatar rounded-circle bg-gradient-info">#}
+{#                  <i class="ni ni-credit-card"></i>#}
+{#                </span>#}
+{#                <small>Payments</small>#}
+{#              </a>#}
+{#              <a href="#!" class="col-4 shortcut-item">#}
+{#                <span class="shortcut-media avatar rounded-circle bg-gradient-green">#}
+{#                  <i class="ni ni-books"></i>#}
+{#                </span>#}
+{#                <small>Reports</small>#}
+{#              </a>#}
+{#              <a href="#!" class="col-4 shortcut-item">#}
+{#                <span class="shortcut-media avatar rounded-circle bg-gradient-purple">#}
+{#                  <i class="ni ni-pin-3"></i>#}
+{#                </span>#}
+{#                <small>Maps</small>#}
+{#              </a>#}
+{#              <a href="#!" class="col-4 shortcut-item">#}
+{#                <span class="shortcut-media avatar rounded-circle bg-gradient-yellow">#}
+{#                  <i class="ni ni-basket"></i>#}
+{#                </span>#}
+{#                <small>Shop</small>#}
+{#              </a>#}
+{#            </div>#}
+{#          </div>#}
+{#        </li>#}
       </ul>
       <ul class="navbar-nav align-items-center  ml-auto ml-md-0 ">
         <li class="nav-item dropdown">
@@ -205,20 +205,20 @@
           </a>
           <div class="dropdown-menu  dropdown-menu-right ">
             <div class="dropdown-header noti-title">
-              <h6 class="text-overflow m-0">Welcome!</h6>
+              <h6 class="text-overflow m-0">Bienvenido!</h6>
             </div>
             <a href="/profile.html" class="dropdown-item">
               <i class="ni ni-single-02"></i>
-              <span>My profile</span>
+              <span>Mi perfil</span>
             </a>
             <a target="_blank" href="http://appseed.us/support" class="dropdown-item">
               <i class="ni ni-support-16"></i>
-              <span>Support</span>
+              <span>Ayuda</span>
             </a>
             <div class="dropdown-divider"></div>
             <a href="{% url 'logout' %}" class="dropdown-item">
               <i class="ni ni-user-run text-red"></i>
-              <span>Logout</span>
+              <span>Salir</span>
             </a>
           </div>
         </li>
