--- a/apps/templates/layouts/base-fullscreen.html
+++ b/apps/templates/layouts/base-fullscreen.html
@@ -1,14 +1,3 @@
-<!--
-=========================================================
-* Argon Dashboard - v1.2.0
-=========================================================
-* Product Page: https://www.creative-tim.com/product/argon-dashboard
-
-* Copyright  Creative Tim (http://www.creative-tim.com)
-* Coded by www.creative-tim.com
-=========================================================
-* The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
--->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -18,7 +7,7 @@
   <link rel="canonical" href="https://appseed.us/admin-dashboards/django-dashboard-argon">
   
   <title>
-    Django Argon Dashboard - {% block title %} Open-Source Admin Panel {% endblock %} | AppSeed
+    AMCM - {% block title %} Open-Source Admin Panel {% endblock %} | AppSeed
   </title>
 
   <link rel="icon" href="/static/assets/img/brand/favicon.png" type="image/png">
@@ -29,7 +18,7 @@
   <link rel="stylesheet" href="/static/assets/vendor/@fortawesome/fontawesome-free/css/all.min.css" type="text/css">
   <!-- Argon CSS -->
   <link rel="stylesheet" href="/static/assets/css/argon.css?v=1.2.0" type="text/css">
-
+  <link rel="stylesheet" href="/static/assets/css/custom.css" type="text/css">
   <!-- Specific CSS goes HERE -->
   {% block stylesheets %}{% endblock stylesheets %}
 
@@ -46,15 +35,14 @@
       <div class="container">
         <div class="header-body text-center mb-7">
           <div class="row justify-content-center">
-            <div class="col-lg-5 col-md-6">
+            <div class="col-lg-8 col-md-8">
               <h1 class="text-white">
                 <a target="_blank" class="text-white"
-                   href="https://appseed.us/admin-dashboards/django-dashboard-argon">Django Argon</a>
+                   href="https://appseed.us/admin-dashboards/django-dashboard-argon">La Asociación Mexicana de Criadores y Caballistas de Caballos Cuarto de Milla</a>
               </h1>
-              <p class="text-lead text-light">
-                Open-Source Flask Starter with Argon Design 
-                Coded by <a target="_blank" class="text-white" href="https://appseed.us">AppSeed</a>.  
-              </p>
+{#              <p class="text-lead text-light">#}
+{#               La Asociación Mexicana de Criadores y Caballistas de Caballos Cuarto de Milla es una Asociación Civil que tiene por objetivo agrupar a los criadores y propietarios, principalmente, de ejemplares de esta raza, y en un esfuerzo conjunto fomentarla en territorio mexicano.#}
+{#              </p>#}
             </div>
           </div>
         </div>
