--- a/apps/static/assets/css/custom.css
+++ b/apps/static/assets/css/custom.css
@@ -8,3 +8,10 @@
 .navbar-vertical.navbar-expand-xs .navbar-nav .nav-link {
     padding: 0.675rem 1.1rem;
 }
+.sidenav .navbar-brand, .sidenav .navbar-heading {
+    padding: .6rem;
+}
+.navbar-vertical .navbar-brand-img, .navbar-vertical .navbar-brand > img {
+    max-width: 100%;
+    max-height: 60px;
+}
