--- a/apps/templates/includes/footer.html
+++ b/apps/templates/includes/footer.html
@@ -3,16 +3,17 @@
       <footer class="footer">
         <div class="row align-items-center justify-content-xl-between">
           <div class="col-xl-6">
-            <div class="text-center text-xl-left text-muted">
-              <a href="https://appseed.us/admin-dashboards/django" 
-                 class="font-weight-bold ml-1" target="_blank">More Dashboards</a>
+            <div class="copyright text-center text-xl-left text-muted">
+                <a target="_blank"
+                   href="http://amcm.com.mx/"
+                   class="font-weight-bold ml-1" target="_blank">Visitar sitio web</a>
             </div>
           </div>
           <div class="col-xl-6">
             <div class="text-center text-xl-right text-muted">
-              <a href="https://bit.ly/3fKQZaL" 
-                 class="font-weight-bold ml-1" target="_blank"> &copy; Creative-Tim</a> 
-                 - coded by <a target="_blank" href="https://appseed.us">AppSeed</a>
+               Copyright 2021 <a target="_blank"
+                         href="https://bit.ly/3fKQZaL"> AMCM® </a>
+               Es una marca registrada.
             </div>
           </div>
         </div>
