--- a/apps/templates/includes/sidenav.html
+++ b/apps/templates/includes/sidenav.html
@@ -3,7 +3,7 @@
     <!-- Brand -->
     <div class="sidenav-header  align-items-center">
       <a class="navbar-brand" href="/">
-        <img src="/static/assets/img/brand/logo_amc.png" class="navbar-brand-img" alt="Argon Design - Jinja Template Logo.">
+        <img src="/static/assets/img/brand/logo_amc.png" class="navbar-brand-img" alt="">
       </a>
     </div>
     <div class="navbar-inner">
@@ -13,57 +13,57 @@
         <ul class="navbar-nav">
           <li class="nav-item">
             <a class="nav-link {% if 'index' in segment %} active {% endif %}" href="/">
-              <i class="ni ni-tv-2 text-primary"></i>
+              <i class="ni ni-tv-2 text-secondary"></i>
               <span class="nav-link-text">Dashboard</span>
             </a>
           </li>
           <li class="nav-item">
             <a class="nav-link {% if 'icons' in segment %} active {% endif %}" href="/icons.html">
-              <i class="ni ni-trophy text-orange"></i>
+              <i class="ni ni-trophy text-secondary"></i>
               <span class="nav-link-text">Clásicos, Derbys, Futuritys</span>
             </a>
           </li>
           <li class="nav-item">
             <a class="nav-link {% if 'map' in segment %} active {% endif %}" href="/map.html">
-              <i class="ni ni-circle-08 text-orange"></i>
+              <i class="ni ni-circle-08 text-secondary"></i>
               <span class="nav-link-text">Asistentes</span>
             </a>
           </li>
           <li class="nav-item">
             <a class="nav-link {% if 'profile' in segment %} active {% endif %}" href="/profile.html">
-             <i class="fas fa-horse-head text-orange"></i>
+             <i class="fas fa-horse-head text-secondary"></i>
               <span class="nav-link-text">Ejemplares</span>
             </a>
           </li>
           <li class="nav-item">
             <a class="nav-link {% if 'tables' in segment %} active {% endif %}" href="/tables.html">
-              <i class="fas fa-money-check-alt text-orange"></i>
+              <i class="fas fa-money-check-alt text-secondary"></i>
               <span class="nav-link-text">Cuotas</span>
             </a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="">
-             <i class="fas fa-percentage text-orange"></i>
+             <i class="fas fa-percentage text-secondary"></i>
               <span class="nav-link-text">Paquetes de descuento</span>
             </a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="">
-             <i class="fas fa-chart-line text-orange"></i>
+             <i class="fas fa-chart-line text-secondary"></i>
               <span class="nav-link-text">Reportes</span>
             </a>
           </li>
 
           <li class="nav-item">
             <a class="nav-link" href="">
-             <i class="far fa-file-alt text-orange"></i>
+             <i class="far fa-file-alt text-secondary"></i>
               <span class="nav-link-text">Registro de cuadras</span>
             </a>
           </li>
 
         <li class="nav-item">
-            <a class="nav-link" href="">
-              <i class="fas fa-file-invoice text-orange"></i>
+            <a class="nav-link" href="/registro_pagos/">
+              <i class="fas fa-file-invoice text-secondary"></i>
               <span class="nav-link-text">Registro de pagos</span>
             </a>
           </li>
@@ -80,7 +80,7 @@
 
           <li class="nav-item">
             <a class="nav-link" href="{% url 'logout' %}">
-             <i class="fas fa-sign-out-alt text-orange"></i>
+             <i class="fas fa-sign-out-alt text-secondary"></i>
               <span class="nav-link-text">Salir</span>
             </a>
           </li>
