inicio de estructura del admin para sobreescribir archivos

--- a/apps/templates/includes/sidenav.html
+++ b/apps/templates/includes/sidenav.html
@@ -36,7 +36,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link {% if 'tables' in segment %} active {% endif %}" href="/tables.html">
+            <a class="nav-link {% if 'tables' in segment %} active {% endif %}" href="/admin/amcm/cuotas/">
               <i class="fas fa-money-check-alt text-secondary"></i>
               <span class="nav-link-text">Cuotas</span>
             </a>
