--- a/apps/templates/includes/sidenav.html
+++ b/apps/templates/includes/sidenav.html
@@ -55,7 +55,7 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="">
+            <a class="nav-link" href="/admin/amcm/cuadras/">
              <i class="far fa-file-alt text-secondary"></i>
               <span class="nav-link-text">Registro de cuadras</span>
             </a>
