--- a/apps/templates/layouts/base.html
+++ b/apps/templates/layouts/base.html
@@ -42,10 +42,12 @@
   {% include "includes/scripts.html" %}
 
   <!-- Specific JS goes HERE --> 
-  {% block javascripts %}{% endblock javascripts %}
+
 
   <script src="/static/assets/js/argon.js?v=1.2.0"></script>
+{% block extra_js %}
 
+{% endblock extra_js %}
 </body>
 
 </html>
