--- a/apps/templates/admin/includes/fieldset.html
+++ b/apps/templates/admin/includes/fieldset.html
@@ -1,30 +1,43 @@
-<fieldset class="module aligned {{ fieldset.classes }}">
+<div class="container-fluid">
+    <div class="card mb-4 mt-4">
+     <div class="card-header">
+                <h3 class="mb-0"> {% if fieldset.name %}<h2>{{ fieldset.name }}</h2>{% endif %}</h3>
+              </div>
+        <div class="card-body">
+            <fieldset class="row {{ fieldset.classes }}">
 
-    {% if fieldset.name %}<h2>{{ fieldset.name }}</h2>{% endif %}
-    {% if fieldset.description %}
-        <div class="description">{{ fieldset.description|safe }}</div>
-    {% endif %}
-    {% for line in fieldset %}
-        <div class="form-row{% if line.fields|length_is:'1' and line.errors %} errors{% endif %}{% if not line.has_visible_field %} hidden{% endif %}{% for field in line %}{% if field.field.name %} field-{{ field.field.name }}{% endif %}{% endfor %}">
-            {% if line.fields|length_is:'1' %}{{ line.errors }}{% endif %}
-            {% for field in line %}
-                <div{% if not line.fields|length_is:'1' %} class="fieldBox{% if field.field.name %} field-{{ field.field.name }}{% endif %}{% if not field.is_readonly and field.errors %} errors{% endif %}{% if field.field.is_hidden %} hidden{% endif %}"{% elif field.is_checkbox %} class="checkbox-row"{% endif %}>
-                    {% if not line.fields|length_is:'1' and not field.is_readonly %}{{ field.errors }}{% endif %}
-                    {% if field.is_checkbox %}
-                        {{ field.field }}{{ field.label_tag }}
-                    {% else %}
-                        {{ field.label_tag }}
-                        {% if field.is_readonly %}
-                            <div class="readonly">{{ field.contents }}</div>
-                        {% else %}
-                            {{ field.field }}
-                        {% endif %}
-                    {% endif %}
-                    {% if field.field.help_text %}
-                        <div class="help">{{ field.field.help_text|safe }}</div>
-                    {% endif %}
-                </div>
-            {% endfor %}
+
+                {% if fieldset.description %}
+                    <div class="description">{{ fieldset.description|safe }}</div>
+                {% endif %}
+                {% for line in fieldset %}
+                    <div class="col-md-4{% if line.fields|length_is:'1' and line.errors %} errors{% endif %}{% if not line.has_visible_field %} hidden{% endif %}{% for field in line %}{% if field.field.name %} field-{{ field.field.name }}{% endif %}{% endfor %}">
+                        {% if line.fields|length_is:'1' %}{{ line.errors }}{% endif %}
+                        {% for field in line %}
+                            <div class="form-group"{% if not line.fields|length_is:'1' %}
+                                class="fieldBox{% if field.field.name %} field-{{ field.field.name }}{% endif %}{% if not field.is_readonly and field.errors %} errors{% endif %}{% if field.field.is_hidden %} hidden{% endif %}"{% elif field.is_checkbox %}
+                                class="checkbox-row"{% endif %}>
+                                {% if not line.fields|length_is:'1' and not field.is_readonly %}
+                                    {{ field.errors }}{% endif %}
+                                {% if field.is_checkbox %}
+                                    {{ field.field }}{{ field.label_tag }}
+                                {% else %}
+                                    {{ field.label_tag }}
+                                    {% if field.is_readonly %}
+                                        <div class="readonly">{{ field.contents }}</div>
+                                    {% else %}
+                                        {{ field.field }}
+                                    {% endif %}
+                                {% endif %}
+                                {% if field.field.help_text %}
+                                    <div class="help">{{ field.field.help_text|safe }}</div>
+                                {% endif %}
+                            </div>
+                        {% endfor %}
+                    </div>
+                {% endfor %}
+            </fieldset>
         </div>
-    {% endfor %}
-</fieldset>
+    </div>
+</div>
+
