--- a/apps/templates/admin/submit_line.html
+++ b/apps/templates/admin/submit_line.html
@@ -1,14 +1,29 @@
 {% load i18n admin_urls %}
-<div class="submit-row">
+
+<div class="container-fluid mt--6">
+    <div class="row justify-content-center">
+      <div class="col-12 card-wrapper">
+        <div class="card">
+          <div class="card-body">
+
+
+<div class="submit-row text-center">
 {% block submit-row %}
-{% if show_save %}<input type="submit" value="{% translate 'Save' %}" class="default" name="_save">{% endif %}
+    {% if show_save %}<button type="submit" value="" class="default btn btn-secondary" name="_save">{% translate 'Save' %}</button>{% endif %}
 {% if show_delete_link and original %}
     {% url opts|admin_urlname:'delete' original.pk|admin_urlquote as delete_url %}
-    <p class="deletelink-box"><a href="{% add_preserved_filters delete_url %}" class="deletelink">{% translate "Delete" %}</a></p>
+    <a href="{% add_preserved_filters delete_url %}" class="deletelink btn btn-danger">{% translate "Delete" %}</a>
 {% endif %}
-{% if show_save_as_new %}<input type="submit" value="{% translate 'Save as new' %}" name="_saveasnew">{% endif %}
-{% if show_save_and_add_another %}<input type="submit" value="{% translate 'Save and add another' %}" name="_addanother">{% endif %}
-{% if show_save_and_continue %}<input type="submit" value="{% if can_change %}{% translate 'Save and continue editing' %}{% else %}{% translate 'Save and view' %}{% endif %}" name="_continue">{% endif %}
+{% if show_save_as_new %}<button type="submit" value="" name="_saveasnew" class="btn btn-secondary">{% translate 'Save as new' %}</button>{% endif %}
+{% if show_save_and_add_another %}<button type="submit" value="" name="_addanother" class="btn btn-secondary">{% translate 'Save and add another' %}</button>{% endif %}
+{% if show_save_and_continue %}<button type="submit" value="" name="_continue" class="btn btn-secondary">{% if can_change %}{% translate 'Save and continue editing' %}{% else %}{% translate 'Save and view' %}{% endif %}</button>{% endif %}
 {% if show_close %}<a href="{% url opts|admin_urlname:'changelist' %}" class="closelink">{% translate 'Close' %}</a>{% endif %}
 {% endblock %}
 </div>
+
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
