--- a/apps/templates/includes/scripts.html
+++ b/apps/templates/includes/scripts.html
@@ -5,3 +5,27 @@
   <script src="/static/assets/vendor/jquery.scrollbar/jquery.scrollbar.min.js"></script>
   <script src="/static/assets/vendor/jquery-scroll-lock/dist/jquery-scrollLock.min.js"></script>
 
+    <script src="/static/assets/vendor/datatables.net/js/jquery.dataTables.min.js"></script>
+    <script src="/static/assets/vendor/datatables.net-bs4/js/dataTables.bootstrap4.min.js"></script>
+    <script src="/static/assets/vendor/datatables.net-buttons/js/dataTables.buttons.min.js"></script>
+    <script src="/static/assets/vendor/datatables.net-buttons-bs4/js/buttons.bootstrap4.min.js"></script>
+    <script src="/static/assets/vendor/datatables.net-buttons/js/buttons.html5.min.js"></script>
+    <script src="/static/assets/vendor/datatables.net-buttons/js/buttons.flash.min.js"></script>
+    <script src="/static/assets/vendor/datatables.net-buttons/js/buttons.print.min.js"></script>
+    <script src="/static/assets/vendor/datatables.net-select/js/dataTables.select.min.js"></script>
+
+<script>
+$( document ).ready(function() {
+
+    $('.vIntegerField, .vTextField, .vDateField, .vLargeTextField').addClass('form-control');
+    $('select').addClass('form-control');
+
+     $('input[type=number]').addClass('form-control');
+    $('.vIntegerField').removeClass('vIntegerField');
+    $('.vTextField').removeClass('vTextField');
+$('.field-observaciones').addClass('col-12');
+$('.field-observaciones').removeClass('col-md-4 ');
+
+
+});
+</script>
