--- a/apps/templates/admin/submit_line.html
+++ b/apps/templates/admin/submit_line.html
@@ -1,6 +1,6 @@
 {% load i18n admin_urls %}
 
-<div class="container-fluid mt--6">
+<div class="container-fluid">
     <div class="row justify-content-center">
       <div class="col-12 card-wrapper">
         <div class="card">
