--- a/apps/static/admin/css/forms.css
+++ b/apps/static/admin/css/forms.css
@@ -473,10 +473,10 @@ body.popup .submit-row {
 
 .inline-group div.add-row,
 .inline-group .tabular tr.add-row td {
-    color: var(--body-quiet-color);
-    background: var(--darkened-bg);
-    padding: 8px 10px;
-    border-bottom: 1px solid var(--hairline-color);
+    /*color: var(--body-quiet-color);*/
+    /*background: var(--darkened-bg);*/
+    /*padding: 8px 10px;*/
+    /*border-bottom: 1px solid var(--hairline-color);*/
 }
 
 .inline-group .tabular tr.add-row td {
@@ -487,9 +487,9 @@ body.popup .submit-row {
 .inline-group ul.tools a.add,
 .inline-group div.add-row a,
 .inline-group .tabular tr.add-row td a {
-    background: url(../img/icon-addlink.svg) 0 1px no-repeat;
+   background: url(../img/icon-addlink.svg) 6px 15px no-repeat;
     padding-left: 16px;
-    font-size: 12px;
+    font-size: 15px;
 }
 
 .empty-form {
