--- a/apps/templates/includes/scripts.html
+++ b/apps/templates/includes/scripts.html
@@ -25,7 +25,7 @@ $( document ).ready(function() {
     $('.vTextField').removeClass('vTextField');
 $('.field-observaciones').addClass('col-12');
 $('.field-observaciones').removeClass('col-md-4 ');
-
+$('.add-row-gsn>a').addClass('btn btn-default');
 
 });
 </script>
