--- a/apps/templates/includes/sidenav.html
+++ b/apps/templates/includes/sidenav.html
@@ -11,6 +11,18 @@
       <div class="collapse navbar-collapse" id="sidenav-collapse-main">
         <!-- Nav items -->
         <ul class="navbar-nav">
+            <li class="nav-item">
+            <a class="nav-link {% if 'index' in segment %} active {% endif %}" href="/admin/amcm/evento/">
+              <i class="ni ni-tv-2 text-secondary"></i>
+              <span class="nav-link-text">Evento</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link {% if 'index' in segment %} active {% endif %}" href="/admin/amcm/registrocuotaevento/">
+              <i class="ni ni-tv-2 text-secondary"></i>
+              <span class="nav-link-text">Registro Cuotas</span>
+            </a>
+          </li>
           <li class="nav-item">
             <a class="nav-link {% if 'index' in segment %} active {% endif %}" href="/">
               <i class="ni ni-tv-2 text-secondary"></i>
