--- a/apps/templates/includes/scripts.html
+++ b/apps/templates/includes/scripts.html
@@ -26,6 +26,7 @@ $( document ).ready(function() {
 $('.field-observaciones').addClass('col-12');
 $('.field-observaciones').removeClass('col-md-4 ');
 $('.add-row-gsn>a').addClass('btn btn-default');
+$('.add-row-gsn>td>a').addClass('btn btn-default');
 
 });
 </script>
