--- a/apps/templates/includes/sidenav.html
+++ b/apps/templates/includes/sidenav.html
@@ -11,18 +11,7 @@
       <div class="collapse navbar-collapse" id="sidenav-collapse-main">
         <!-- Nav items -->
         <ul class="navbar-nav">
-            <li class="nav-item">
-            <a class="nav-link {% if 'index' in segment %} active {% endif %}" href="/admin/amcm/evento/">
-              <i class="ni ni-tv-2 text-secondary"></i>
-              <span class="nav-link-text">Evento</span>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link {% if 'index' in segment %} active {% endif %}" href="/admin/amcm/registrocuotaevento/">
-              <i class="ni ni-tv-2 text-secondary"></i>
-              <span class="nav-link-text">Registro Cuotas</span>
-            </a>
-          </li>
+
           <li class="nav-item">
             <a class="nav-link {% if 'index' in segment %} active {% endif %}" href="/">
               <i class="ni ni-tv-2 text-secondary"></i>
@@ -45,6 +34,19 @@
             <a class="nav-link {% if 'profile' in segment %} active {% endif %}" href="/profile.html">
              <i class="fas fa-horse-head text-secondary"></i>
               <span class="nav-link-text">Ejemplares</span>
+            </a>
+          </li>
+        <li class="nav-item">
+            <a class="nav-link {% if 'index' in segment %} active {% endif %}" href="/admin/amcm/evento/">
+              <i class="fas fa-calendar-alt text-secondary"></i>
+              <span class="nav-link-text">Evento</span>
+            </a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link {% if 'index' in segment %} active {% endif %}" href="/admin/amcm/registrocuotaevento/">
+              <i class="fas fa-wallet text-secondary"></i>
+              <span class="nav-link-text">Registro Cuotas</span>
             </a>
           </li>
           <li class="nav-item">
