--- a/apps/static/admin/css/forms.css
+++ b/apps/static/admin/css/forms.css
@@ -493,7 +493,7 @@ body.popup .submit-row {
 }
 
 .empty-form {
-    display: none;
+    display: none !important;
 }
 
 /* RELATED FIELD ADD ONE / LOOKUP */
