--- a/apps/templates/admin/change_list_object_tools.html
+++ b/apps/templates/admin/change_list_object_tools.html
@@ -24,7 +24,7 @@
                             {% url cl.opts|admin_urlname:'add' as add_url %}
                             <a href="{% add_preserved_filters add_url is_popup to_field %}"
                                class="addlink btn btn-lg btn-neutral">
-                                {% blocktranslate with cl.opts.verbose_name as name %}Add
+                                {% blocktranslate with cl.opts.verbose_name as name %}Agregar
                                     {{ name }}{% endblocktranslate %}
                             </a>
 
