--- a/apps/templates/includes/navigation.html
+++ b/apps/templates/includes/navigation.html
@@ -207,9 +207,9 @@
             <div class="dropdown-header noti-title">
               <h6 class="text-overflow m-0">Bienvenido!</h6>
             </div>
-            <a href="/profile.html" class="dropdown-item">
+            <a href="/admin/auth/user/" class="dropdown-item">
               <i class="ni ni-single-02"></i>
-              <span>Mi perfil</span>
+              <span>Usuarios</span>
             </a>
             <a target="_blank" href="http://appseed.us/support" class="dropdown-item">
               <i class="ni ni-support-16"></i>
