--- a/apps/templates/includes/sidenav.html
+++ b/apps/templates/includes/sidenav.html
@@ -24,6 +24,12 @@
             </a>
           </li>
           <li class="nav-item">
+            <a class="nav-link {% if 'index' in segment %} active {% endif %}" href="/admin/amcm/inscripcion/">
+              <i class="ni ni-tv-2 text-secondary"></i>
+              <span class="nav-link-text">Inscripción</span>
+            </a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link {% if 'index' in segment %} active {% endif %}" href="/">
               <i class="ni ni-tv-2 text-secondary"></i>
               <span class="nav-link-text">Dashboard</span>
