ajuste a modelos, admin se agregan modelo inscripcion y tipo de evento, se ajustan links de menu

--- a/apps/templates/home/registro_pagos.html
+++ b/apps/templates/home/registro_pagos.html
@@ -43,9 +43,10 @@
         <div class="card">
           <!-- Card header -->
           <div class="card-header">
-            <h3 class="mb-0">Action buttons</h3>
+            <h3 class="mb-0">Registro de Pagos</h3>
             <p class="text-sm mb-0">
-              This is an exmaple of datatable using the well known datatables.net plugin. This is a minimal setup in order to get started fast.
+                Sin datos registrados
+{#              This is an exmaple of datatable using the well known datatables.net plugin. This is a minimal setup in order to get started fast.#}
             </p>
           </div>
 
