--- a/apps/templates/includes/sidenav.html
+++ b/apps/templates/includes/sidenav.html
@@ -48,51 +48,52 @@
                         <div class="collapse" id="navbar-dashboards">
                             <ul class="nav nav-sm flex-column">
                                 <li class="nav-item">
-                                    <a href="/" class="nav-link {% if 'index' in segment %} active {% endif %}">
+                                    <a href="/admin/amcm/descuentos/" class="nav-link {% if 'index' in segment %} active {% endif %}">
                                         {#                                        <span class="sidenav-mini-icon"> D </span>#}
                                         <span class="sidenav-normal"> Descuentos </span>
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="/alternative.html"
+                                    <a href="/admin/amcm/tipocuota/"
                                        class="nav-link {% if 'alternative' in segment %} active {% endif %}">
                                         {#                                        <span class="sidenav-mini-icon"> A </span>#}
                                         <span class="sidenav-normal"> Tipo de Cuota </span>
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="/alternative.html"
+                                    <a href="/admin/amcm/tipoevento/"
                                        class="nav-link {% if 'alternative' in segment %} active {% endif %}">
                                         {#                                        <span class="sidenav-mini-icon"> A </span>#}
                                         <span class="sidenav-normal"> Tipo de Evento </span>
                                     </a>
                                 </li>
-                                <li class="nav-item">
-                                    <a class="nav-link {% if 'index' in segment %} active {% endif %}"
-                                       href="/admin/amcm/registrocuotaevento/">
+{#                                <li class="nav-item">#}
+{#                                    <a class="nav-link {% if 'index' in segment %} active {% endif %}"#}
+{#                                       href="/admin/amcm/cuotas/">#}
+{##}
+{#                                        <span class="nav-link-text">Cuotas</span>#}
+{#                                    </a>#}
+{#                                </li>#}
 
-                                        <span class="nav-link-text">Cuotas</span>
-                                    </a>
-                                </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="/admin/amcm/cuadras/">
-
-                                        <span class="nav-link-text">cuadras</span>
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a href="/alternative.html"
+                                    <a href="/admin/amcm/nacionalidad/"
                                        class="nav-link {% if 'alternative' in segment %} active {% endif %}">
                                         {#                                        <span class="sidenav-mini-icon"> A </span>#}
                                         <span class="sidenav-normal"> Nacionalidad </span>
                                     </a>
                                 </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="/admin/amcm/cuadras/">
+
+                                        <span class="nav-link-text">Cuadras</span>
+                                    </a>
+                                </li>
 
                                 <li class="nav-item">
-                                    <a href="/alternative.html"
+                                    <a href="/admin/amcm/ejemplares/"
                                        class="nav-link {% if 'alternative' in segment %} active {% endif %}">
                                         {#                                        <span class="sidenav-mini-icon"> A </span>#}
-                                        <span class="sidenav-normal"> ejemplares </span>
+                                        <span class="sidenav-normal"> Ejemplares </span>
                                     </a>
                                 </li>
                             </ul>
@@ -118,19 +119,19 @@
                     {#            </a>#}
                     {#          </li>#}
                     <li class="nav-item">
-                        <a class="nav-link" href="">
+                        <a class="nav-link" href="/icons.html">
                             <i class="fas fa-percentage text-secondary"></i>
                             <span class="nav-link-text">Paquetes de descuento</span>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/registro_pagos/">
+                        <a class="nav-link" href="/registro_pagos.html">
                             <i class="fas fa-file-invoice text-secondary"></i>
                             <span class="nav-link-text">Registro de pagos</span>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="">
+                        <a class="nav-link" href="/tables.html">
                             <i class="fas fa-chart-line text-secondary"></i>
                             <span class="nav-link-text">Reportes</span>
                         </a>
