--- a/apps/templates/admin/change_list.html
+++ b/apps/templates/admin/change_list.html
@@ -31,9 +31,8 @@
     {% block breadcrumbs %}
         <div class="breadcrumbs">
             <a href="{% url 'admin:index' %}">{% translate 'Home' %}</a>
-            &rsaquo; <a
-                href="{% url 'admin:app_list' app_label=cl.opts.app_label %}">{{ cl.opts.app_config.verbose_name }}</a>
-            &rsaquo; {{ cl.opts.verbose_name_plural|capfirst }}
+            <a href="{% url 'admin:app_list' app_label=cl.opts.app_label %}">{{ cl.opts.app_config.verbose_name }}</a>
+            {{ cl.opts.verbose_name_plural|capfirst }}
         </div>
     {% endblock %}
 {% endif %}
