--- a/apps/templates/includes/scripts.html
+++ b/apps/templates/includes/scripts.html
@@ -28,5 +28,7 @@ $('.field-observaciones').removeClass('col-md-4 ');
 $('.add-row-gsn>a').addClass('btn btn-default');
 $('.add-row-gsn>td>a').addClass('btn btn-default');
 
+ $('#id_password1').addClass('form-control');
+ $('#id_password2').addClass('form-control');
 });
 </script>
