--- a/apps/static/assets/css/custom.css
+++ b/apps/static/assets/css/custom.css
@@ -38,4 +38,9 @@
 td.delete{
 text-align: center;
 }
-
+.help{
+    margin-left: 0px !important;
+    font-size: 11px;
+    color: #ff0000;
+    padding-left: 10px !important;
+}
