--- a/apps/templates/admin/change_list.html
+++ b/apps/templates/admin/change_list.html
@@ -75,7 +75,7 @@
                     <div class="card-body">
                         <div class="module{% if cl.has_filters %} filtered{% endif %}" id="changelist">
                             <div class="changelist-form-container">
-                                {% block search %}{% search_form cl %}{% endblock %}
+{#                                {% block search %}{% search_form cl %}{% endblock %}#}
                                 {% block date_hierarchy %}{% if cl.date_hierarchy %}{% date_hierarchy cl %}
                                 {% endif %}{% endblock %}
 
@@ -97,7 +97,7 @@
                             </div>
                             {% block filters %}
                                 {% if cl.has_filters %}
-                                    <div id="changelist-filter">
+                                    <div id="changelist-filter" class="d-none">
                                         <h2>{% translate 'Filter' %}</h2>
                                         {% if cl.has_active_filters %}<h3 id="changelist-filter-clear">
                                             <a href="{{ cl.clear_all_filters_qs }}">&#10006; {% translate "Clear all filters" %}</a>
