--- a/apps/amcm/templates/amcm/evento-list.html
+++ b/apps/amcm/templates/amcm/evento-list.html
@@ -1,12 +1,10 @@
 {% extends "admin/base_site.html" %}
 {% load i18n %}
 {% block extrastyle %}{{ block.super }}
-
     <script type="text/javascript" src="/static/erp/admin/assets/ajax/project_section.js"></script>
 {% endblock %}
-
 {% block content %}
-    <div id="content-main">
+    <div id="content-main" class="hola hola">
         <div class="row">
             <div class="col-xs-12">
                 <div class="card">
