--- a/apps/templates/admin/edit_inline/tabular.html
+++ b/apps/templates/admin/edit_inline/tabular.html
@@ -20,7 +20,7 @@
 
    {{ inline_admin_formset.formset.non_form_errors }}
    <div class="table-responsive results">
-        <table id="result_list" class="table align-items-center ">
+        <table id="result_list" class="table align-items-center mod-table">
      <thead><tr>
        <th class="original"></th>
      {% for field in inline_admin_formset.fields %}
@@ -29,6 +29,7 @@
          {% if field.help_text %}<img src="{% static "admin/img/icon-unknown.svg" %}" class="help help-tooltip" width="10" height="10" alt="({{ field.help_text|striptags }})" title="{{ field.help_text|striptags }}">{% endif %}
          </th>
        {% endif %}
+
      {% endfor %}
      {% if inline_admin_formset.formset.can_delete and inline_admin_formset.has_delete_permission %}<th>{% translate "Delete?" %}</th>{% endif %}
      </tr></thead>
@@ -79,8 +80,10 @@
         {% if inline_admin_formset.formset.can_delete and inline_admin_formset.has_delete_permission %}
           <td class="delete">{% if inline_admin_form.original %}{{ inline_admin_form.deletion_field.field }}{% endif %}</td>
         {% endif %}
+
         </tr>
      {% endfor %}
+
      </tbody>
    </table>
        </div>
