--- a/apps/templates/admin/change_list_results.html
+++ b/apps/templates/admin/change_list_results.html
@@ -31,8 +31,8 @@
                     </th>
 
                 {% endfor %}
-             <th style="width: 30px !important; padding: 0 !important;text-align: center">Ver</th>
-            <th style="width: 30px !important; padding: 0 !important;text-align: center">Editar</th>
+           <!--  <th style="width: 30px !important; padding: 0 !important;text-align: center">Ver</th>
+            <th style="width: 30px !important; padding: 0 !important;text-align: center">Editar</th>-->
             </tr>
             </thead>
             <tbody>
@@ -45,8 +45,8 @@
                 {% endif %}
                 <tr>
                     {% for item in result %}{{ item }}{% endfor %}
-                <td style="padding: 0 !important;text-align: center"><button type="button" class="btn btn-outline-secondary btn-sm"><i class="far fa-eye"></i></button></td>
-                <td style="padding: 0 !important;text-align: center"><button type="button" class="btn btn-outline-secondary btn-sm"><i class="far fa-edit"></i></button></td>
+                <!--<td style="padding: 0 !important;text-align: center"><button type="button" class="btn btn-outline-secondary btn-sm"><i class="far fa-eye"></i></button></td>
+                <td style="padding: 0 !important;text-align: center"><button type="button" class="btn btn-outline-secondary btn-sm"><i class="far fa-edit"></i></button></td>-->
                 </tr>
 
             {% endfor %}
