admin  pago , migrates

--- a/apps/templates/includes/sidenav.html
+++ b/apps/templates/includes/sidenav.html
@@ -125,7 +125,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/registro_pagos.html">
+                        <a class="nav-link" href="/admin/amcm/pago/">
                             <i class="fas fa-file-invoice text-secondary"></i>
                             <span class="nav-link-text">Registro de pagos</span>
                         </a>
