--- a/apps/templates/includes/sidenav.html
+++ b/apps/templates/includes/sidenav.html
@@ -130,6 +130,14 @@
                             <span class="nav-link-text">Registro de pagos</span>
                         </a>
                     </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="/admin/amcm/recibo/">
+                            <i class="fas fa-file-invoice text-secondary"></i>
+                            <span class="nav-link-text">Registro de Recibos</span>
+                        </a>
+                    </li>
+
                     <li class="nav-item">
                         <a class="nav-link" href="/tables.html">
                             <i class="fas fa-chart-line text-secondary"></i>
