--- a/apps/templates/layouts/base.html
+++ b/apps/templates/layouts/base.html
@@ -52,6 +52,8 @@
 
 
   <script src="/static/assets/js/argon.js?v=1.2.0"></script>
+  <script src="/static/smart-selects/admin/js/chainedfk.js"></script>
+<script src="/static/smart-selects/admin/js/bindfields.js"></script>
 
 {% block extra_js %}
 
