--- a/apps/amcm/templates/amcm/recibo.html
+++ b/apps/amcm/templates/amcm/recibo.html
@@ -36,7 +36,7 @@
                                     style="opacity:0;padding-top: 0.45rem !important;font-size: 13px;font-weight: bolder;width: 76%;    vertical-align: top;    line-height: 17px;padding-bottom: 0rem;">
                                     Asociación Mexicana de Criadores y Caballistas<br>de Caballos Cuarto de Milla
                                     A.C.<br><span><hr
-                                        style="border: 0;border-top: 1px solid #fff;margin: 0 10px;"></span></th>
+                                        style="border: 0;border-top: 1px ;margin: 0 10px;"></span></th>
                                 <th scope="col" class="pe-2 text-center ps-2 p-0"
                                     style="padding-top: 0.55rem !important;font-size: 13px;font-weight: bold;padding-bottom: 0rem;    border: 0px solid #000;">
                                     <br><span style="    font-size: 18px;">53811</span></th>
@@ -74,11 +74,11 @@
                             <tbody>
                             <tr align="left">
                                 <td class="text-left pl-3 pr-0 py-0"
-                                    style="opacity:0;font-size: 0.671rem;text-align: left;width: 1%;white-space: nowrap;border-top: 1px solid #fff;border-bottom: 1px solid #fff;">
+                                    style="opacity:0;font-size: 0.671rem;text-align: left;width: 1%;white-space: nowrap;border-top: 1px ;border-bottom: 1px ;">
                                     Recibimos del Sr.
                                 </td>
                                 <td class="py-0 pl-0 pr-3"
-                                    style="font-size: 0.671rem;text-align: left;border-top: 1px solid #fff;border-bottom: 1px solid #fff;font-weight: 700;text-transform: uppercase;">
+                                    style="font-size: 0.671rem;text-align: left;border-top: 1px ;border-bottom: 1px s;font-weight: 700;text-transform: uppercase;">
                                     Dato dato
                                 </td>
                             </tr>
