se ocultan los iconos de add and edit related de los foreign key fields

--- a/apps/amcm/templates/amcm/recibo.html
+++ b/apps/amcm/templates/amcm/recibo.html
@@ -14,29 +14,10 @@
     <!-- BLOQUE de scripts DJANGO -->
     <!-- Argon CSS -->
     <link rel="stylesheet" href="/static/assets/css/argon.css?v=1.2.0" type="text/css">
-<style>
-      body {
-          height: 842px;
-          width: 680px;
-          /* to centre page on screen*/
-          margin-left: auto;
-          margin-right: auto;
-          font-family: Arial, Helvetica, sans-serif;
-          font-size: 17px;
-          font-weight: normal;
-          -webkit-print-color-adjust: exact;
-      }
-
-     {% comment %} table {
-          background-image: url(http://localhost:8000/static/dictamen/img/bg.png);
-          -webkit-print-color-adjust: exact;
-      }{% endcomment %}
-
-  </style>
-<style type="text/css">
+    <style type="text/css">
         @page {
                 size: letter portrait;
-                margin: 3cm;
+
                 -webkit-print-color-adjust: exact;
 
             table {
@@ -61,13 +42,12 @@
 
 <body class="">
 
-
     <div class="container-fluid my-3 py-3" id="content_frame">
         <div class="row">
             <div class="col-md-10 col-lg-8 col-sm-10 mx-auto">
 
                 <div style="width: 612px; height: 792px" class="border-danger">
-                    <div class="table-responsive" style="    padding: 1.5rem 1.5rem 0 1.5rem;">
+                    <div class="table-responsive">
 
                         <table class="table text-right border" style="margin-bottom: 0px">
                             <thead>
