--- a/apps/static/assets/css/custom.css
+++ b/apps/static/assets/css/custom.css
@@ -47,3 +47,13 @@ text-align: center;
 td>p{
     display:none
 }
+
+.form-group {
+    margin-bottom: 12px;
+}
+
+.datetimeshortcuts{
+        position: absolute;
+    right: 28px;
+    top: 40px;
+}
