--- a/apps/templates/admin/change_form.html
+++ b/apps/templates/admin/change_form.html
@@ -35,7 +35,9 @@
 {% endif %}{% endif %}
 {% endblock %}
 <form {% if has_file_field %}enctype="multipart/form-data" {% endif %}{% if form_url %}action="{{ form_url }}" {% endif %}method="post" id="{{ opts.model_name }}_form" novalidate>{% csrf_token %}{% block form_top %}{% endblock %}
-<div>
+      <div class="container-fluid">
+    <div class="card mb-4 mt-4">
+        <div class="card-header">
 {% if is_popup %}<input type="hidden" name="{{ is_popup_var }}" value="1">{% endif %}
 {% if to_field %}<input type="hidden" name="{{ to_field_var }}" value="{{ to_field }}">{% endif %}
 {% if save_on_top %}{% block submit_buttons_top %}{% submit_row %}{% endblock %}{% endif %}
@@ -86,6 +88,9 @@
 
 {% prepopulated_fields_js %}
 
+</div>
+    </div>
+      </div>
 </div>
 </form></div>
 {% endblock %}
