--- a/apps/amcm/templates/amcm/recibo.html
+++ b/apps/amcm/templates/amcm/recibo.html
@@ -1,4 +1,4 @@
-{% load i18n l10n %}
+{% load i18n l10n static %}<!DOCTYPE html>
 <!DOCTYPE html>
 <html lang="es">
 
@@ -7,83 +7,262 @@
     <title>
         AMCM - {% block title %}  {% endblock %}
     </title>
- <style type="text/css">
-      body {
-          height: 842px;
-          width: 680px;
-          /* to centre page on screen*/
-          margin-left: auto;
-          margin-right: auto;
-          font-family: Arial, Helvetica, sans-serif;
-          font-size: 17px;
-          font-weight: normal;
-          -webkit-print-color-adjust: exact;
-      }
+    <style type="text/css">
+        body {
+            height: 842px;
+            width: 680px;
+            /* to centre page on screen*/
+            margin-left: auto;
+            margin-right: auto;
+            font-family: Arial, Helvetica, sans-serif;
+            font-size: 17px;
+            font-weight: normal;
+            -webkit-print-color-adjust: exact;
+
+        }
 
         @page {
-                size: letter portrait;
-                margin: 3cm;
-                -webkit-print-color-adjust: exact;
+            size: letter portrait;
+            margin: 3cm;
+            -webkit-print-color-adjust: exact;
 
-            @frame header_frame {           /* Static Frame */
-                    -pdf-frame-content: header_content;
-                    left: 50pt; width: 512pt; top: 90pt; height: 500pt;
-                }
-            @frame content_frame {          /* Content Frame */
-                     left: 50pt; width: 512pt; top: 120pt; height: 632pt;
-                }
-            @frame footer_frame {           /* Another static Frame */
-                    -pdf-frame-content: footer_content;
-                    left: 50pt; width: 512pt; top: 732pt; height: 300pt;
-            }
+            @frame header_frame { /* Static Frame */
+            -pdf-frame-content: header_content;
+            left: 50pt;
+            width: 512pt;
+            top: 90pt;
+            height: 500pt;
         }
-        </style> <style type="text/css">
+        @frame content_frame {
+            /* Content Frame */
+        left: 50pt; width: 512pt; top: 120pt; height: 632pt;
+        }
+        @frame footer_frame {
+            /* Another static Frame */
+        -pdf-frame-content:footer_content;
+        left: 50pt; width: 512pt; top: 732pt; height: 300pt;
+        }
+        }
+
+         table { -pdf-keep-with-next: true; }
+    p { margin: 0; -pdf-keep-with-next: true; }
+    p.separator { -pdf-keep-with-next: false; font-size: 6pt; }
+    </style>
+    <style type="text/css">
         @page {
-                size: letter portrait;
-                margin: 3cm;
-                -webkit-print-color-adjust: exact;
+            size: letter portrait;
+            margin: 3cm;
+            -webkit-print-color-adjust: exact;
 
-            table {
-                -pdf-keep-with-next: true;
-                height:100pt
-            }
-            @frame header_frame {           /* Static Frame */
-                    -pdf-frame-content: header_content;
-                    left: 50pt; width: 512pt; top: 90pt; height: 500pt;
-                }
-            @frame content_frame {          /* Content Frame */
-                     left: 50pt; width: 512pt; top: 120pt; height: 632pt;
-                }
-            @frame footer_frame {           /* Another static Frame */
-                    -pdf-frame-content: footer_content;
-                    left: 50pt; width: 512pt; top: 732pt; height: 300pt;
-            }
+        table {
+            -pdf-keep-with-next: true;
+            height: 100pt
         }
-        </style>
+
+        @frame header_frame {
+            /* Static Frame */
+            -pdf-frame-content: header_content;
+            left: 50pt;
+            width: 512pt;
+            top: 90pt;
+            height: 500pt;
+        }
+        @frame content_frame {
+            /* Content Frame */
+            left: 50pt;
+            width: 512pt;
+            top: 120pt;
+            height: 632pt;
+        }
+        @frame footer_frame {
+            /* Another static Frame */
+            -pdf-frame-content: footer_content;
+            left: 50pt;
+            width: 512pt;
+            top: 732pt;
+            height: 300pt;
+        }
+        }
+    </style>
 </head>
-
+{% load i18n %}
 <body class="">
 
 {% block content %}
-<div style="text-align: right;width: 580px; height: 792px; position: relative">
-<div>
-<p style=" margin-top: 60px">{{no_recibo}}</p>
-<p style="padding-top: 10px;margin-bottom: 11px;"><span>{{dia}}</span>&nbsp;&nbsp;&nbsp;&nbsp;<span>{{mes}}</span>&nbsp;&nbsp;&nbsp;&nbsp;<span>{{anio}}</span></p>
-<p style="margin: 0;text-align: left;font-size: 14px;margin-left: 118px;">{{ usuario }}</p>
-<p style="margin: 0;text-align: left;font-size: 14px;margin-left: 118px;">{{importe}} {{ importe_letra }}</p>
-<br>
-<p style="margin: 0;text-align: left;font-size: 14px;margin-left: 118px;">{{ concepto }}</p>
-<br>
-<br>
-<br>
-<p style="margin-top: 8px; margin-bottom:0;text-align: left;font-size: 14px;margin-left: 118px;">{{recibido_en}}</p>
-<p style="margin: 0;text-align: left;font-size: 14px;margin-left: 118px;">{{saldo}}</p>
+    <div style="text-align: right;width: 580px; height: 792px; position: relative">
+        <div>
+            <p style=" margin-top: 60px">{{ no_recibo }}</p>
+            <p style="padding-top: 10px;margin-bottom: 11px;">
+                <span>{{ dia }}</span>&nbsp;&nbsp;&nbsp;&nbsp;<span>{{ mes }}</span>&nbsp;&nbsp;&nbsp;&nbsp;<span>{{ anio }}</span>
+            </p>
+            <p style="margin: 0;text-align: left;font-size: 14px;margin-left: 118px;">{{ usuario }}</p>
+            <p style="margin: 0;text-align: left;font-size: 14px;margin-left: 118px;">{{ importe }} {{ importe_letra }}</p>
+            <br>
+            <p style="margin: 0;text-align: left;font-size: 14px;margin-left: 118px;">{{ concepto }}</p>
+            <br>
+            <br>
+            <br>
+            <p style="margin-top: 8px; margin-bottom:0;text-align: left;font-size: 14px;margin-left: 118px;">{{ recibido_en }}</p>
+            <p style="margin: 0;text-align: left;font-size: 14px;margin-left: 118px;">{{ saldo }}</p>
 
-<p style="text-align: left;font-size: 14px;margin-left: 118px;"></p>
-    </div>
-<div><p style="margin: 0;text-align: left;position: absolute;right: 53px;margin-top: -32px;font-size: 20px;">00</p></div>
-</div>
-    s
+            <p style="text-align: left;font-size: 14px;margin-left: 118px;"></p>
+        </div>
+        <div>
+            <p style="margin: 0;text-align: left;position: absolute;right: 53px;margin-top: -32px;font-size: 20px;">
+                00</p>
+        </div>
+        <div>
+            <img src="/admin/img/recibohippodromo.jpg" style="width: 612px;height: 792px;">
+        </div>
+
+
+<div style="width: 612px; height: 792px; " class="border-danger">
+                    <div style="padding: 1.5pt 1.5pt 0 1.5pt;">
+                        <table style="margin-bottom: 0px; width: 100%;">
+                            <tbody>
+                            <tr>
+                                <td colspan="2"
+                                    style="padding-top: 0.45pt !important;font-size: 13pt;font-weight: bolder;width: 76%;    vertical-align: top;    line-height: 17pt;padding-bottom: 0pt;">
+                                    Asociación Mexicana de Criadores y Caballistas<br>de Caballos Cuarto de Milla
+                                    A.C.<br><span><hr
+                                        style="border: 0;border-top: 1pt solid #000;margin: 0 10pt;"></span></td>
+                                <td
+                                    style="font-size: 13pt;font-weight: bold;padding-bottom: 0pt;    border: 1pt solid #000;">
+                                    Recibo<br><span style="font-size: 18pt;">53811</span></td>
+
+                            </tr>
+                            <tr>
+                                <td style="padding-left: 4pt !important;font-size: 8pt; vertical-align: top"
+                                    class="text-left p-0">Av. del Conscripto Nº 311 Col. Lomas de
+                                    Sotelo,<br>Zona de caballerizas Int. del Hipódromo de las Américas<br> Delegación
+                                    Miguel Hidalgo. C.P. 11200. CDMX.<br>amccccm@yahoo.com.mx<br>www.amcm.com.mx
+                                </td>
+                                <td style="padding-left: 13pt !important;font-size: 8pt; vertical-align: top">Tels. (55)
+                                    5294-5283, 5294-5256<br> 5294-5246 Nº de fax (55) 5080-4035<br>9 a 15 hrs.
+                                </td>
+                                <td
+                                    style="border: 1pt solid #000;padding-top: 10pt !important;">
+                                    <span>Fecha</span><br>
+                                    <div style="width: 100%;    border-top: 1pt solid #000;"><span
+                                            style="width: 33.3%;">20<br>Día</span><span
+                                            style="width: 33.3%;">10<br>Mes</span><span style="width: 33.3%;">2021<br>Año</span>
+                                    </div>
+                                </td>
+                            </tr>
+                           </tbody>
+                        </table>
+                        <table class="table text-right"
+                               style="border: 1pt solid #000;border-top: 1pt solid #000;    margin-bottom: 0;">
+                            <tbody>
+                            <tr align="left">
+                                <td class="text-left pl-3 pr-0 py-0"
+                                    style="font-size: 0.671pt;text-align: left;width: 1%;white-space: nowrap;border-top: 1px solid #000;border-bottom: 0px solid #000;">
+                                    Recibimos del Sr.
+                                </td>
+                                <td class="py-0 pl-0 pr-3"
+                                    style="font-size: 0.671pt;text-align: left;border-top: 1px solid #000;border-bottom: 0px solid #000;">
+                                    1
+                                </td>
+                            </tr>
+                            <tr>
+                                <td class="text-left pl-3 pr-0 py-0"
+                                    style="font-size: 0.671pt;text-align: left;width: 1%;white-space: nowrap;border-top: 1px solid #000;border-bottom: 0px solid #000;">
+                                    La cantidad de $
+                                </td>
+                                <td class="py-0 pl-0 pr-3"
+                                    style="font-size: 0.671pt;text-align: left;border-top: 1px solid #000;border-bottom: 0px solid #000;">
+                                    1
+                                </td>
+                            </tr>
+                            <tr>
+                                <td class="text-left pl-3 pr-0 py-0"
+                                    style="font-size: 0.671pt;text-align: left;width: 1%;white-space: nowrap;border-top: 1px solid #000;border-bottom: 0px solid #000;"></td>
+                                <td class="py-0 pl-0 pr-3"
+                                    style="font-size: 0.671pt;text-align: left;border-top: 1px solid #000;border-bottom: 0px solid #000;">
+                                    &nbsp;
+                                </td>
+                            </tr>
+                            <tr>
+                                <td class="text-left pl-3 pr-0 py-0"
+                                    style="font-size: 0.671pt;text-align: left;width: 1%;white-space: nowrap;border-top: 1px solid #000;border-bottom: 0px solid #000;">
+                                    Por concepto de:
+                                </td>
+                                <td class="py-0 pl-0 pr-3"
+                                    style="font-size: 0.671pt;text-align: left;border-top: 1px solid #000;border-bottom: 0px solid #000;">
+                                    1
+                                </td>
+                            </tr>
+                            <tr>
+                                <td class="text-left pl-3 pr-0 py-0"
+                                    style="font-size: 0.671pt;text-align: left;width: 1%;white-space: nowrap;border-top: 1px solid #000;border-bottom: 0px solid #000;"></td>
+                                <td class="py-0 pl-0 pr-3"
+                                    style="font-size: 0.671pt;text-align: left;border-top: 1px solid #000;border-bottom: 0px solid #000;">
+                                    &nbsp;
+                                </td>
+                            </tr>
+                            <tr>
+                                <td class="text-left pl-3 pr-0 py-0"
+                                    style="font-size: 0.671pt;text-align: left;width: 1%;white-space: nowrap;border-top: 1px solid #000;border-bottom: 0px solid #000;"></td>
+                                <td class="py-0 pl-0 pr-3"
+                                    style="font-size: 0.671pt;text-align: left;border-top: 1px solid #000;border-bottom: 0px solid #000;">
+                                    &nbsp;
+                                </td>
+                            </tr>
+                            <tr>
+                                <td class="text-left pl-3 pr-0 py-0"
+                                    style="font-size: 0.671pt;text-align: left;width: 1%;white-space: nowrap;border-top: 1px solid #000;border-bottom: 0px solid #000;"></td>
+                                <td class="py-0 pl-0 pr-3"
+                                    style="font-size: 0.671pt;text-align: left;border-top: 1px solid #000;border-bottom: 0px solid #000;">
+                                    &nbsp;
+                                </td>
+                            </tr>
+                            <tr>
+                                <td class="text-left pl-3 pr-0 py-0"
+                                    style="font-size: 0.671pt;text-align: left;width: 1%;white-space: nowrap;border-top: 1px solid #000;border-bottom: 0px solid #000;"></td>
+                                <td class="py-0 pl-0 pr-3"
+                                    style="font-size: 0.671pt;text-align: left;border-top: 1px solid #000;border-bottom: 0px solid #000;">
+                                    &nbsp;
+                                </td>
+                            </tr>
+                            <tr>
+                                <td class="text-left pl-3 pr-0 py-0"
+                                    style="font-size: 0.671pt;text-align: left;width: 1%;white-space: nowrap;border-top: 1px solid #000;border-bottom: 0px solid #000;">
+                                    Valor recibido en:
+                                </td>
+                                <td class="py-0 pl-0 pr-3"
+                                    style="font-size: 0.671pt;text-align: left;border-top: 1px solid #000;border-bottom: 0px solid #000;">
+                                    1
+                                </td>
+                            </tr>
+                            <tr>
+                                <td class="text-left pl-3 pr-0 py-0"
+                                    style="font-size: 0.671pt;text-align: left;width: 1%;white-space: nowrap;border-top: 1px solid #000;border-bottom: 0px solid #000;"></td>
+                                <td class="py-0 pl-0 pr-3"
+                                    style="font-size: 0.671pt;text-align: left;border-top: 1px solid #000;border-bottom: 0px solid #000;">
+                                    &nbsp;
+                                </td>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    <div class="text-left" style="padding-top: 10px;">
+                        <div style="text-align: left;margin-left: 115px;font-size: 14px;">Saldo por pagar</div>
+                        <div style="margin-left: 285px;font-size: 20px;line-height: 18px;">
+                            <div style="position: relative;">61 <span style="font-size: 14px">$1,000</span></div>
+                            <div style="position: absolute;margin-top: 10px;">61 <span
+                                    style="font-size: 14px">$500</span></div>
+                        </div>
+                    </div>
+                    <div style="text-align: center;">
+                        <hr style="border: 0;border-top: 1px solid #000;margin: 0 140px;">
+                        <div style="font-size: 10px;line-height: 10px;">Firma de</div>
+                        <div style="font-size: 10px;">Asociación Mexicana de Criadores y Caballistas de Caballos Cuarto
+                            de Milla A.C.
+                        </div>
+                    </div>
+
+                </div>
+  </div>
 {% endblock content %}
 
 </body>
