--- a/apps/templates/home/index.html
+++ b/apps/templates/home/index.html
@@ -17,15 +17,15 @@
         <div class="container-fluid">
             <div class="header-body">
                 <div class="row align-items-center py-4">
-                    <div class="col-lg-6 col-7">
-                        <h6 class="h2 d-inline-block mb-0">Default</h6>
-                        <nav aria-label="breadcrumb" class="d-none d-md-inline-block ml-md-4">
-                            <ol class="breadcrumb breadcrumb-links breadcrumb-dark">
-                                <li class="breadcrumb-item"><a href="#"><i class="fas fa-home"></i></a></li>
-                                <li class="breadcrumb-item"><a href="#">Dashboard</a></li>
-
-                            </ol>
-                        </nav>
+                    <div class="col-lg-9 col-9">
+                        <h6 class="h2 d-inline-block mb-0">Asociación Mexicana de Criadores y Caballistas de Caballos Cuarto de Milla A.C.</h6>
+{#                        <nav aria-label="breadcrumb" class="d-none d-md-inline-block ml-md-4">#}
+{#                            <ol class="breadcrumb breadcrumb-links breadcrumb-dark">#}
+{#                                <li class="breadcrumb-item"><a href="#"><i class="fas fa-home"></i></a></li>#}
+{#                                <li class="breadcrumb-item"><a href="#">Inicio</a></li>#}
+{##}
+{#                            </ol>#}
+{#                        </nav>#}
                     </div>
                     {#            <div class="col-lg-6 col-5 text-right">#}
                     {#              <a href="#" class="btn btn-sm btn-neutral">New</a>#}
