--- a/apps/templates/includes/sidenav.html
+++ b/apps/templates/includes/sidenav.html
@@ -139,7 +139,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="amcm/reporte/">
+                        <a class="nav-link" href="/amcm/reporte/">
                             <i class="fas fa-chart-line text-secondary"></i>
                             <span class="nav-link-text">Reportes</span>
                         </a>
